--- a/MikroSRZ104/MikroSRZ104.csproj
+++ b/MikroSRZ104/MikroSRZ104.csproj
@@ -67,54 +67,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigFilesForm.cs">
+    <Compile Include="Forms\ConfigFilesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConfigFilesForm.Designer.cs">
+    <Compile Include="Forms\ConfigFilesForm.Designer.cs">
       <DependentUpon>ConfigFilesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataExchange.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="Forms\SensorsTableForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form4.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form4.Designer.cs">
-      <DependentUpon>Form4.cs</DependentUpon>
+    <Compile Include="Forms\SensorsTableForm.Designer.cs">
+      <DependentUpon>SensorsTableForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MikroSRZ.cs" />
-    <Compile Include="MiniPageMikroSRZ.cs">
+    <Compile Include="Controls\MiniPageMikroSRZ.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MiniPageMikroSRZ.Designer.cs">
+    <Compile Include="Controls\MiniPageMikroSRZ.Designer.cs">
       <DependentUpon>MiniPageMikroSRZ.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensor.cs" />
-    <EmbeddedResource Include="ConfigFilesForm.resx">
+    <EmbeddedResource Include="Forms\ConfigFilesForm.resx">
       <DependentUpon>ConfigFilesForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\SensorsTableForm.resx">
+      <DependentUpon>SensorsTableForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form4.resx">
-      <DependentUpon>Form4.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MiniPageMikroSRZ.resx">
+    <EmbeddedResource Include="Controls\MiniPageMikroSRZ.resx">
       <DependentUpon>MiniPageMikroSRZ.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -144,6 +134,7 @@
       <Name>lib60870</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
