--- a/MikroSRZ104/MikroSRZ104.csproj
+++ b/MikroSRZ104/MikroSRZ104.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\SensorsTablePage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\SensorsTablePage.Designer.cs">
+      <DependentUpon>SensorsTablePage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ConfigFilesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,12 +85,6 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SensorsTableForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\SensorsTableForm.Designer.cs">
-      <DependentUpon>SensorsTableForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="MikroSRZ.cs" />
     <Compile Include="Controls\MiniPageMikroSRZ.cs">
       <SubType>UserControl</SubType>
@@ -95,14 +95,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensor.cs" />
+    <EmbeddedResource Include="Controls\SensorsTablePage.resx">
+      <DependentUpon>SensorsTablePage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigFilesForm.resx">
       <DependentUpon>ConfigFilesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SensorsTableForm.resx">
-      <DependentUpon>SensorsTableForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MiniPageMikroSRZ.resx">
       <DependentUpon>MiniPageMikroSRZ.cs</DependentUpon>
