--- a/MikroSRZ104/MikroSRZ104.csproj
+++ b/MikroSRZ104/MikroSRZ104.csproj
@@ -116,6 +116,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="Properties\DataSources\MikroSRZ.datasource" />
     <None Include="Properties\DataSources\Sensor.datasource" />
     <None Include="Properties\Settings.settings">
